force-app/main/default/objects/SFDC_MDF__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>The date the activity is planned. Optionally incorporate a validation rule to ensure that there is ample lead time to approve the request before the planned activity.</description>
    <inlineHelpText>The date the activity will take place.  If more than one day, then enter the first date</inlineHelpText>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>