force-app/main/default/objects/SFDC_MDF__c/fields/Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Days__c</fullName>
    <description>The number of elapsed days since the request was created</description>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>