force-app/main/default/objects/SFDC_MDF__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The requested amount. Consider activating a validation rule to enforce a certain minimum or maximum amount</description>
    <inlineHelpText>Dollar amount of MDF funds you are requesting</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>