force-app/main/default/objects/SFDC_MDF__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optionally assign the fund request to a budget.</description>
    <label>Budget</label>
    <referenceTo>SFDC_Budget__c</referenceTo>
    <relationshipName>R00N30000002DjDHEA0</relationshipName>
    <type>Lookup</type>
</CustomField>