force-app/main/default/objects/SFDC_MDF__c/fields/Claim_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Deadline_Date__c</fullName>
    <description>Set through the approval process this date is the date the submitter has to submit a claim related to this request</description>
    <label>Claim Deadline Date</label>
    <type>Date</type>
</CustomField>