force-app/main/default/objects/SFDC_MDF__c/fields/Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner account owner which is derived using an APEX trigger and generally not through the UI</description>
    <label>Partner Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000002DjDQEA0</relationshipName>
    <type>Lookup</type>
</CustomField>