force-app/main/default/objects/SFDC_MDF__c/fields/Proof_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Performance__c</fullName>
    <inlineHelpText>Outline the details you expect to submit after the activity to support the proof of performing the activity</inlineHelpText>
    <label>Proof of Performance</label>
    <type>TextArea</type>
</CustomField>