force-app/main/default/objects/SFDC_MDF__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <description>High level information about the fund request</description>
    <inlineHelpText>Describe the specific details of the activity</inlineHelpText>
    <label>Request Details</label>
    <type>TextArea</type>
</CustomField>