force-app/main/default/objects/SFDC_MDF__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <description>A unique id assigned to the fund request. Optionally useful for the partner as a means to identify the specific fund request record.</description>
    <displayFormat>{YY}{MM}{DD}-{0000}</displayFormat>
    <label>Request ID</label>
    <type>AutoNumber</type>
</CustomField>