force-app/main/default/objects/SFDC_MDF__c/fields/Select_Budget_Warning__c.field-meta.xml
<CustomField>
    <fullName>Select_Budget_Warning__c</fullName>
    <description>Used on the approval page to alert the user to select a budget is they have not done so already</description>
    <formula>if( Budget__c = &quot;&quot;,  HYPERLINK(&quot;/&quot; &amp; Id,  &quot;IF APPROVING, PLEASE EDIT THE FUND REQUEST AND SELECT A BUDGET&quot; , &quot;_parent&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Select Budget Warning</label>
    <type>Text</type>
</CustomField>