force-app/main/default/objects/SFDC_MDF__c/recordTypes/Fund_Request_Approved.recordType-meta.xml
<RecordType>
    <fullName>Fund_Request_Approved</fullName>
    <active>true</active>
    <label>Fund Request - Approved</label>
</RecordType>