force-app/main/default/objects/SFDC_MDF__c/recordTypes/Fund_Request_Draft.recordType-meta.xml
<RecordType>
    <fullName>Fund_Request_Draft</fullName>
    <active>true</active>
    <label>Fund Request - Draft</label>
</RecordType>