force-app/main/default/objects/SFDC_MDF__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Fund Requests</label>
    <language>en_US</language>
</ListView>