force-app/main/default/objects/SFDC_MDF__c/listViews/Rejected.listView-meta.xml
<ListView>
    <fullName>Rejected</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Fund Requests</label>
    <language>en_US</language>
</ListView>